minor layout bug fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,19 +158,6 @@ section div article {
     border-color: white;
 }
 
-section span article {
-    width: auto;
-    max-width: none;
-    min-width: 0;
-    margin-top: 5px;
-    background-color: rgba(255, 255, 255, 0.5);
-    box-shadow: 0 0 5px grey;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
 footer {
     background-color: rgb(255, 110, 212);
     color: white;
@@ -183,7 +170,7 @@ footer {
     opacity: 0;
 }
 
-@media screen and (max-width: 1320px) {
+@media screen and (max-width: 1120px) {
     body div {
         margin: 2px;
         width: 100%;
